# Eval-Anything

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: environments.yaml  harness_profiles.yaml  judge_panels.yaml  judge_profiles.yaml  llm_profiles.yaml  targets.yaml
configs/experiments/: slot_filling.yaml
datasets/slot_filling/: xiu_test.jsonl  zhuang_test.jsonl
skills/eval-anything/: SKILL.md
skills/eval-anything/references/: cli.md  configs.md  datasets.md  extending.md  harness-selection.md  reports.md
skills/eval-anything/templates/: dataset.jsonl.j2  environment.yaml.j2  experiment.yaml.j2  mock_synthesis_prompt.md
skills/eval-anything/workflows/: add-harness.md  add-llm.md  compare-models.md  design-experiment.md  mock-dataset.md
src/: __main__.py  config_paths.py
src/cli_chat/: __init__.py  agent.py  driver.py  prompt_loader.py  terminal_ui.py  tools.py
src/core/: __init__.py  config.py  orchestrator.py  trajectory.py
src/environment/: __init__.py  base.py  dialog.py  rag_qa.py  workspace.py
src/harness/: base.py  direct.py  function_call.py  raw.py  react.py
src/llm/: __init__.py  base.py  mock.py  openai_compatible.py
src/metrics/: __init__.py  calibration.py  evaluators.py  pairwise.py  qualitative.py  quantitative.py
src/reporting/: __init__.py  case_study.py  excel_writer.py  html_dashboard.py  trajectory_logger.py
src/setup_wizard/: __init__.py  wizard.py
src/utils/: json_utils.py
tasks/.templates/code_exec/: query.md  task.yaml
tasks/.templates/code_exec/.eval/: rubric.py
tasks/.templates/exact_match/: query.md  task.yaml
tests/: test_calibration.py  test_cli_chat_smoke.py  test_e2e.py  test_endpoint_url.py  test_env_resolve.py  test_pairwise.py  test_panel_judge.py  test_rag_qa_environment.py  test_resume.py  test_targets.py  test_workspace_environment.py
tools/: star_dashboard.html
